deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-app
        image: zeul1478/express-sample:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"


        livenessProbe:          # 👈 Kubernetes checks if app is alive
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10   # wait 10s before first check
          periodSeconds: 5          # check every 5s
        readinessProbe:        # 👈 Kubernetes checks if app is ready
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5    # wait 5s before first check
          periodSeconds: 5
