service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: NodePort
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 3000       # service port inside cluster
      targetPort: 3000 # container port
      nodePort: 30080  # external port on your laptop
